2004-04-01  Danny Smith  <dannysmith@users.sourceforge.net>

	* crt1.c (_mingw32_init_fmode): Set *_imp___fmode_dll to
	_fmode if not __MSVCRT__.

2004-03-30  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/io.h: (_findfirst): Correct prototype.

2004-03-30  Hans Leidekker  <hans@it.vu.nl>

	* include/io.h: (_findnext, _findclose): Correct prototype.

2004-03-28  Hans Leidekker  <hans@it.vu.nl>

	* include/math.h (FP_*): Add defines.

2004-03-29  Danny Smith  <dannysmith@users.sourceforge.net>

	* mingwex/math/round.c: Rewrite.
	* mingwex/math/roundf.c: Rewrite.
	* mingwex/math/roundl.c: Rewrite.

2004-03-25  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/_mingw.h (__MSVCRT_VERSION__): Define default as 0x0600.
	* include/time.h (__time64_t): Add typedef.
	(_mktime64): Add prototype for __MSVCRT_VERSION__ >= 0x0601.
	(_ctime64): Likewise.
	(_wctime64): Likewise.
	(_gmtime64): Likewise.
	(_localtime64): Likewise.
	(wcsftime): Move into _WTIME_DEFINED block.
	Regroup non-ANSI prototypes.
	* include/io.h: Include <stdint.h>.
	(__finddata64_t): Add struct definition.
	(__wfinddata64_t): Likewise.
	(_findfirst64): Add prototype for __MSVCRT_VERSION__ >= 0x0601.
	(_findnext64): Likewise.
	(_wfindfirst64): Likewise.
	(_wfindnext64): Likewise.
	* include/sys/timeb.h (__timeb64): Add struct definition.
	(_ftime64): Add prototype for __MSVCRT_VERSION__ >= 0x0601.
	* include/sys/utime.h (__utimbuf64): Add struct definition.
	(_utime64): Add prototype for __MSVCRT_VERSION__ >= 0x0601.
	(_futime64): Likewise.
	(_wutime64): Likewise.
	* include/sys/stat.h (__stat64):  Add struct definition.
	(_fstat64): Add prototype for __MSVCRT_VERSION__ >= 0x0601.
	(_stat64): Likewise.
	(_wstat64): Likwise.
	* include/sys/types.h (__time64_t):  Add typedef.
	* include/wchar.h (__wfinddata64_t): Add structure definition.
	(__stat64): Likewise.
	(_wctime64): Add prototype for __MSVCRT_VERSION__ >= 0x0601.
	(_wfindfirst64): Likewise.
	(_wfindnext64): Likewise.