@@ -1,3 +1,8 @@
+2004-04-19  Earnie Boyd  <earnie@users.sf.net>
+
+	* include/_mingw.h: Revert to primary release 3 and increment minor
+	release to 3.
+
 2004-04-01  Danny Smith  <dannysmith@users.sourceforge.net>
 
 	* crt1.c (_mingw32_init_fmode): Set *_imp___fmode_dll to
